apps/nginx-demo/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
spec:
  rules:
    - host: staging-demo.192.168.250.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-demo
                port:
                  number: 80
  tls:
    - hosts:
        - staging-demo.192.168.250.2.nip.io
      secretName: staging-demo-tls
